--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,17 +11,27 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
+        
         <activity
-            android:name="diy.eoego.app.MainActivity"
-            android:label="@string/app_name" >
+            android:name="diy.eoego.app.ui.SplashActivity"
+            android:label="@string/app_name" 
+            android:launchMode="singleTask"
+            android:theme="@style/splash_style" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity 
+            android:name=".ui.MainActivity"
+            android:hardwareAccelerated="false"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
+        
     </application>
 
 </manifest>
